# XCacheSystem

./: CMakeLists.txt  README.md  XAdaptiveCache.h  XCachePolicy.h  XLFUCache.h  XLRUCache.h  XWTinyLFUCache.h  cache_test.cpp  testAdaptive.cpp  testAllCachePolicy.cpp
XArcCache/: XArcCache.h  XArcCacheNode.h  XArcLFUpart.h  XArcLRUpart.h
